k8s/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: wasanssss/korea-trip-ai:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: dev
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
