k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trip-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      # 1. AI 요청
      - path: /api/ai
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8001
      
      # 2. 백엔드 요청
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
              
      # 3. 프론트엔드 (나머지 전체)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
